src/test/deca/context/invalid/champ_int_init_objet.deca
// Description :
// Initialisation d'un champ int avec un objet absurde

// Resultats :
// Echec

class Joueur { }

class FeuilleMatch {
    int note = new Joueur();
}

{ }